@@ -138,7 +138,7 @@ if ($exportData) {
 	$export->setWriter(CExportWriterFactory::getWriter(CExportWriterFactory::XML));
 	$exportData = $export->export();
 
-	if (!no_errors()) {
+	if (hasErrorMesssages()) {
 		show_messages();
 	}
 	else {
